--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section>
-        <h1 class="text-5xl text-center pt-10">Function er bap !!!!</h1>
+        <h1 class="text-5xl text-center pt-10">YOUR Functional bank !!!!</h1>
         <div class="grid grid-cols-3 gap-3.5 w-9/12 mx-auto">
             <div id="deposit-1 " class=" text-white mt-20 p-10 bg-sky-400">
                 <h1 class="text-3xl pb-5">Deposit</h1>
